--- a/frontend/src/components/grid.css
+++ b/frontend/src/components/grid.css
@@ -9,3 +9,7 @@
   background-color: #ffffff;
   border: 1px solid #747474;
 }
+
+.cell.alive {
+  background-color: #800000; /* Alive cells are white */
+}
